<resources>
    <string name="app_name">Cosmic-OS</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="changelog">Changelog</string>
    <string name="team">Team</string>
    <string name="donate">Donate</string>
    <string name="cosmic_info">
    Cosmic-OS is an AOSP | CAF based custom aftermarket firmware distribution for Android™
        devices with OMS | Substratum support. Our aim is to deliver light-speed performance with
        plenty of features,fluidity at every edge, and good battery life. We hope
        that you\'ll love our work, and help us in making it even better in the future.</string>
    <string name="changelog_error">Unable to load changelog</string>
    <string name="cosmic_banner">cosmic_banner</string>
    <string name="changelog_not_found">changelog_not_found</string>
    <string name="github">github</string>
    <string name="thread">thread</string>
    <string name="telegram">telegram</string>
    <string name="help_developer_have_an_oreo">Help developer buy some oreo!</string>
    <string name="cosmicoreo">cosmicoreo</string>
    <string name="unknown">Unknown</string>
    <string name="cosmic_version">Cosmic Version :</string>
    <string name="cosmic_features">Based on Android 8.1.0 Release 1 \n

*Basic Customisations*\n\n

# Recents Screen:\n
- Clear All Recents FAB\n
- Immersive Recents\n
- Hide apps from recents\n
\n
# StatusBar:\n
- StatusBar Items\n
- VOLTE Switch\n
\n
# Navigation Bar:\n
- Navigation Bar Tuner\n
\n
# Lockscreen:\n
- Lockscreen Weather\n
- Lockscreen Tuner\n
- Lockscreen Media Art\n
- Lockscreen Charging\n
- Lockscreen Quick Unlock\n
- Lockscreen Pin Scramble\n
\n
# Gestures:\n
- Double Tap to sleep Options for:\n
  * StatusBar\n
  * Navigation Bar\n
  * Lockscreen\n
- Flashlight Toggle\n
\n
# Notifications:\n
- Incall Vibration Options\n
\n
# Quick Settings:\n
- Smart Pulldown options\n
- QS panel Columns and Rows\n
\n
# Volume Rocker:\n
- Do not Disturb Switch\n
- Volume Rocker Music Controls\n
- Volume Buttons Swap\n
- Volume Rocker Cursor Control\n
- Volume Rocker Wake\n
\n
# Miscellaneous:\n
- Extended Restart\n
- Dashboard Conditions Toggle\n
- Night Mode Options\n
- Battery Usage Alerts\n
- Wakelock Blocker\n
- Alarm Blocker\n
- Wake on Plug\n
- CPU Info Switch\n
\n
*Featured Stuffs*\n
- Themes Manager\n
- Cosmic-OS Wallpapers\n
- Cosmic-OS App\n
- Adaptive Icons\n
\n
And last but not the least, the Galaxy to #ExploreTheCosmos !</string>
    <string name="paypal">paypal</string>
    <string name="cosmic_os">Cosmic OS</string>
    <string name="appbar_icon">appbar_icon</string>
    <string name="cosmic_features_header">Features List</string>
    <string name="features_info">features info</string>
    <string name="checking_for_update">Your system is up-to-date</string>
    <string name="download">Download</string>
    <string name="update_available">Update available</string>
    <string name="auto_check_intervals">Auto Check Intervals</string>
    <string name="_4_hours">4 Hours</string>
    <string name="_8_hours">8 Hours</string>
    <string name="_12_hours">12 Hours</string>
    <string name="_24_hours">24 Hours</string>
</resources>
